--- a/ferpecles/ferpecles.ipynb
+++ b/ferpecles/ferpecles.ipynb
@@ -13,13 +13,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Nizhnesvirsky lower bay is a vital part of a river system characterized by a dynamic freeze-thaw cycle. Understanding the extent of ice coverage and open water in this region is crucial for various applications, including navigation, ecosystem monitoring, and climate research. In this Jupyter notebook, we will leverage satellite imagery from the Sentinel-1 Interferometric Wide (IW) product, along with remote sensing principles, to classify ice and open water over a period of 8 months, from September 2022 to May 2023.\n",
+    "The Ferpècles glacier is melting.\n",
     "\n",
-    "The Sentinel-1 satellite offers reliable and frequent radar imaging capabilities, making it ideal for monitoring ice and water bodies. The Sentinel-1 IW product provides Synthetic Aperture Radar (SAR) data, which is unaffected by weather conditions, daylight, or cloud cover. SAR data measures the backscattered electromagnetic waves, allowing us to distinguish between different surface types.\n",
-    "\n",
-    "TODO:\n",
-    "\n",
-    "* put everything in a numpy array (batch_size, seq_length, x_coord, y_coord, bands)"
+    "We use the Copernicus' Sentinel 2 data to denileat the glaciers and estimate its surface. Follow along as we authenticate to the server and download the data."
    ]
   },
   {
